--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
     "gh-pages": "^6.3.0",
     "vite": "^6.3.5"
   },
-  "homepage": "https://github.com/MaoMachado/CrearTareas"
+  "homepage": "https://maomachado.github.io/CrearTareas"
 }
